--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,5 +44,6 @@ subjects:
 - !lcc 'PQ'
 - !lcsh 'Marie Antoinette, Queen, consort of Louis XVI, King of France, 1755-1793
   -- Fiction'
+- GITenberg
 title: The Mesmerist's Victim
 url: http://www.gutenberg.org/ebooks/42690
